<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ultimaterecall.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cards"
        android:name="com.example.ultimaterecall.ui.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" >
        <action
            android:id="@+id/action_navigation_cards_to_reviewFragment"
            app:destination="@id/navigation_review"
            app:restoreState="true"/>
        <action
            android:id="@+id/action_navigation_cards_to_packFragment"
            app:destination="@id/navigation_pack" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.ultimaterecall.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.example.ultimaterecall.ui.review.ReviewFragment"
        android:label="@string/review_string"
        android:layout="@layout/fragment_review">
        <argument
            android:name="packNumber"
            app:argType="integer"
            android:defaultValue="0"/>
        <action
            android:id="@+id/action_navigation_review_to_navigation_cards"
            app:destination="@id/navigation_cards" />
    </fragment>
    <fragment
        android:id="@+id/navigation_pack"
        android:name="com.example.ultimaterecall.ui.cards.PackFragment"
        android:label="@string/title_pack">
        <action
            android:id="@+id/action_packFragment_to_navigation_cards"
            app:destination="@id/navigation_cards" />
    </fragment>

</navigation>