<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:background="@drawable/card_background"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/idMultipleCardPrompt"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/thick_border"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/card_prompt"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/idMultipleRevealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginBottom="4dp"
        android:text="@string/card_reveal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="321dp"
        android:layout_height="346dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMultipleCardPrompt"
        app:layout_constraintVertical_bias="0.764">

        <TableRow>

            <TextView
                android:id="@+id/idMultipleAnswer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@string/card_answer"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/idMultipleAnswer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@string/card_answer"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="invisible" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/idMultipleAnswer3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@string/card_answer"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="invisible" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>